--- a/style.css
+++ b/style.css
@@ -99,5 +99,36 @@ body{
     vertical-align: middle;
     background-size: cover;
     color: #F9FAF8;
+    
+}
+
+.mainCont h1{
+    color: #1F2937;
+    font-size: 36px;
+    font-weight: bold;
+    text-align: center;
+    padding: 20px;
+}
+
+.boxDiv{
+    display: flex;
+    flex-wrap: wrap;
+    align-items: center;
+    justify-content: center;
+    gap: 30px
+}
+
+.box{
+    height: 170px;
+    width: 170px;
+    border: 4px solid #3882F6;
+    border-radius: 20px;
+}
+
+.box p{
+    margin-top: 180px;
+    font-size: 16px;
+    text-align: center;
+    color: #1f2937a9;
 }
 
