--- a/style.css
+++ b/style.css
@@ -132,3 +132,35 @@ body{
     color: #1f2937a9;
 }
 
+.quoteCont{
+    background-color: #E5E7EB;
+    
+    margin-top: 140px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-wrap: nowrap;
+    flex-direction: column;
+
+}
+
+.quote{
+    font-size: 34px;
+    font-style: italic;
+    font-weight:300;
+    padding-left: 280px;
+    padding-right: 280px;
+    padding-top: 100px;
+    color: #1F2937;
+    text-align:start;
+}
+
+.quoteAuthor{
+    font-size: 22px;
+    font-weight: bolder;
+    color: #1F2937;
+    margin-left: 500px;
+    padding: 20px;
+    padding-bottom: 100px;
+}
+
