--- a/style.css
+++ b/style.css
@@ -164,3 +164,41 @@ body{
     padding-bottom: 100px;
 }
 
+.bannerCont{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.callBanner{
+    background-color:#3882F6;
+    height: 160px;
+    width: 1000px;
+    margin: 100px;
+    border-radius: 8px;
+    display: flex;
+    align-items: center;
+    justify-content:space-around;
+}
+
+.callBanner button{
+    height: 40px;
+    width: 130px;
+    border-radius: 10px;
+    outline: none;
+    border: 2px solid #E5E7EB;
+    background-color: #3882F6;
+    color: #E5E7EB;
+    font-size: 18px;
+    font-weight: bolder;
+    margin-top: 10px;
+}
+
+.callBanner p{
+    font-size: 14px;
+}
+
+.callBanner .callHeader{
+    font-size: 24px;
+}
+
